# 404_Luck_Not_Found_Servidor

./: .gitignore  .gitmodules  Casino-Virtual.code-workspace  DOCUMENTACION_SALA_JUEGO.md  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test_sala_knucklebones.py
Model/: KnuckleBones.py  SaladeJuegos.py
Utils/: Utils.py
doc/: knuckleBot.txt
html-docs/contents/: diagrams.html  element_index.html  navigation.html
html-docs/uml/: controladorUML.mdj
model/juego/salaDeJuego/: SalaDeJuegos.py
model/usuario/: Usuario.py
registros/: jugador_AJ246.json  jugador_AJ276.json  jugador_AJ331.json  jugador_AJ599.json  jugador_RS563.json  jugador_RS780.json  jugador_RS834.json  jugador_RS987.json  sala_PARTIDA_COMPLETA_001.json  sala_SALA_PERSIST_001.json
src/: __init__.py  demo_texas_poker.py  main.py
src/model/: __init__.py
src/model/ejemplo/: ClaseSinConstructor.py
src/model/salaDeJuego/: SalaDeJuego.py  SalaDeJuegoServicio.py  SalaDeJuego_fixed.py  __init__.py
src/model/salaDeJuego/enums/: Etapas.py  Juegos.py  __init__.py
src/model/salaDeJuego/juego/: KnuckleBones.py  __init__.py
src/model/salaDeJuego/juego/juegosDeCartas/: BlackJack.py  BlackJack_nuevo.py  Mazo.py  (+3 more)
src/model/usuario/: Usuario.py  UsuarioServicio.py  __init__.py
src/utils/: Util.py  __init__.py  firestore.py  firestore_backup.py  pretty_printer.py
src/view/: README.md  inicio.py
src/view/screens/: home.py
src/view/screens/juegos/: blackjack.py  poker.py  tablero.txt
src/view/utils/: events.py  helpers.py  printers.py
tests/: __init__.py  test_main.py
(+5 files in other folders)
